--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,9 +104,15 @@ flutter:
   #       - packages/flutter_gallery_assets/fonts/google_fonts/Raleway-Regular.ttf
   #       - packages/flutter_gallery_assets/fonts/google_fonts/Raleway-Light.ttf
   fonts:
-    - family: GalleryIcons
+    - family: NotoSans
       fonts:
-        - asset: packages/flutter_gallery_assets/fonts/GalleryIcons.ttf
+        - asset: fonts/NotoSans-Regular.ttf
+    - family: notosanssc
+      fonts:
+        - asset: fonts/NotoSansSC.otf
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto-Regular.ttf
   assets:
     # - packages/flutter_gallery_assets/assets/studies/shrine_card_dark.png
     # - packages/flutter_gallery_assets/assets/studies/starter_card.png
@@ -126,10 +132,10 @@ flutter:
     # - packages/flutter_gallery_assets/assets/icons/material/material.png
     # - packages/flutter_gallery_assets/assets/icons/reference/reference.png
     # - packages/flutter_gallery_assets/assets/demos/bottom_navigation_background.png
-    - packages/flutter_gallery_assets/fonts/GalleryIcons.ttf
+    # - packages/flutter_gallery_assets/fonts/GalleryIcons.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/Merriweather-Regular.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/Eczar-Regular.ttf
-    - packages/flutter_gallery_assets/fonts/google_fonts/Montserrat-Medium.ttf
+    # - packages/flutter_gallery_assets/fonts/google_fonts/Montserrat-Medium.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/Rubik-Bold.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/Merriweather-Light.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/RobotoCondensed-Bold.ttf
@@ -137,16 +143,16 @@ flutter:
     # - packages/flutter_gallery_assets/fonts/google_fonts/RobotoMono-Regular.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/LibreFranklin-ExtraBold.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/LibreFranklin-Bold.ttf
-    - packages/flutter_gallery_assets/fonts/google_fonts/Oswald-SemiBold.ttf
-    - packages/flutter_gallery_assets/fonts/google_fonts/Oswald-Medium.ttf
+    # - packages/flutter_gallery_assets/fonts/google_fonts/Oswald-SemiBold.ttf
+    # - packages/flutter_gallery_assets/fonts/google_fonts/Oswald-Medium.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/LibreFranklin-SemiBold.ttf
-    - packages/flutter_gallery_assets/fonts/google_fonts/Montserrat-Bold.ttf
+    # - packages/flutter_gallery_assets/fonts/google_fonts/Montserrat-Bold.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/Merriweather-BoldItalic.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/Rubik-Medium.ttf
-    - packages/flutter_gallery_assets/fonts/google_fonts/Montserrat-SemiBold.ttf
+    # - packages/flutter_gallery_assets/fonts/google_fonts/Montserrat-SemiBold.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/RobotoCondensed-Regular.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/LibreFranklin-Medium.ttf
-    - packages/flutter_gallery_assets/fonts/google_fonts/Montserrat-Regular.ttf
+    # - packages/flutter_gallery_assets/fonts/google_fonts/Montserrat-Regular.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/Rubik-Regular.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/Eczar-SemiBold.ttf
     # - packages/flutter_gallery_assets/fonts/google_fonts/WorkSans-Regular.ttf
