--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   vector_math: ^2.1.2
   dio: ^5.1.0
   image_picker: ^1.0.4
+  flutter_markdown: ^0.6.18+2
+  markdown: ^7.0.0
+  string_scanner: ^1.2.0
 
 dev_dependencies:
   flutter_test:
