--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
   <application
       android:name="io.flutter.embedding.android.FlutterPlayStoreSplitApplication"
       android:icon="@mipmap/ic_launcher"
-      android:label="App Gallery">
+      android:label="Flutter Gallery">
     <activity
         android:name=".MainActivity"
         android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
