--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>App Gallery</string>
+	<string>Flutter Gallery</string>
 	<key>CFBundleLocalizations</key>
 	<array>
 		<string>en</string>
