--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ repository: https://github.com/flutter/gallery
 version: 2.10.2+021002 # See README.md for details on versioning.
 
 environment:
-  flutter: ^3.10.0-10.0.pre.17 # Keep relatively close to master channel version
-  sdk: ">=2.17.0"
+  flutter: ^3.13.0
+  sdk: ^3.1.0
 
 dependencies:
   flutter:
@@ -25,7 +25,7 @@ dependencies:
   firebase_crashlytics: ^3.1.1
   firebase_performance: ^0.9.0+14
   get_storage: ^2.1.1
-  google_fonts: ^5.0.0
+  google_fonts: ^6.1.0
   intl: any # An exact version pin will be provided by the Flutter SDK
   meta: ^1.7.0
   package_info_plus: ^4.0.2
@@ -50,7 +50,7 @@ dev_dependencies:
   flutter_driver:
     sdk: flutter
   args: ^2.3.1
-  flutter_lints: ^2.0.1
+  flutter_lints: ^3.0.0
   grinder: ^0.9.1
   path: ^1.8.1
   string_scanner: ^1.1.0
@@ -123,7 +123,7 @@ flutter:
     # - packages/flutter_gallery_assets/assets/studies/starter_card.png
     # - packages/flutter_gallery_assets/assets/studies/starter_card_dark.png
     # - packages/flutter_gallery_assets/assets/studies/fortnightly_card_dark.png
-    - packages/flutter_gallery_assets/assets/studies/rally_card_dark.png
+    # - packages/flutter_gallery_assets/assets/studies/rally_card_dark.png
     # - packages/flutter_gallery_assets/assets/studies/reply_card_dark.png
     # - packages/flutter_gallery_assets/assets/studies/fortnightly_card.png
     # - packages/flutter_gallery_assets/assets/studies/crane_card.png
