--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: gallery
-description: A resource to help developers evaluate and use Flutter.
+description: A gallery to list apps.
 repository: https://github.com/flutter/gallery
 version: 2.10.2+021002 # See README.md for details on versioning.
 
@@ -13,28 +13,20 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   adaptive_breakpoints: ^0.1.7
-  animations: ^2.0.2
-  collection: ^1.16.0
-  cupertino_icons: ^1.0.4
+  collection: ^1.17.0
   dual_screen: ^1.0.4
-  flutter_staggered_grid_view: ">=0.6.1 <0.8.0"
+  flutter_staggered_grid_view: ^0.7.0
   get_storage: ^2.1.1
   google_fonts: ^6.1.0
-  intl: any # An exact version pin will be provided by the Flutter SDK
+  intl: ^0.18.1
   meta: ^1.11.0
   package_info_plus: ^5.0.1
-  path_provider: ^2.0.11
   provider: ^6.0.2
-  rally_assets: ^3.0.1
-  scoped_model: ^2.0.0
-  shrine_images: ^2.0.1
   transparent_image: ^2.0.1
   url_launcher: ^6.1.2
-  vector_math: ^2.1.2
   dio: ^5.1.0
   image_picker: ^1.0.4
-  flutter_markdown: ^0.6.18+2
-  markdown: ^7.2.2
+  flutter_markdown: ^0.6.21
   string_scanner: ^1.2.0
   flutter_spinkit: ^5.2.0
 
