--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,20 +13,21 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   adaptive_breakpoints: ^0.1.7
-  collection: ^1.17.0
+  collection: ^1.18.0
   dual_screen: ^1.0.4
   flutter_staggered_grid_view: ^0.7.0
   get_storage: ^2.1.1
-  google_fonts: ^6.1.0
+  google_fonts: ^6.2.1
   intl: ^0.18.1
   meta: ^1.11.0
   package_info_plus: ^5.0.1
-  provider: ^6.0.2
+  provider: ^6.1.2
   transparent_image: ^2.0.1
-  url_launcher: ^6.1.2
-  dio: ^5.1.0
-  image_picker: ^1.0.4
+  url_launcher: ^6.2.5
+  dio: ^5.4.1
+  image_picker: ^1.0.7
   flutter_markdown: ^0.6.21
+  markdown: ^7.2.2
   string_scanner: ^1.2.0
   flutter_spinkit: ^5.2.0
 
