--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   markdown: ^7.2.2
   string_scanner: ^1.2.0
   flutter_spinkit: ^5.2.0
+  file_picker: ^8.0.0
 
 flutter:
   generate: true # Enables generation of localized strings from arb files
