--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,12 +25,11 @@ dependencies:
   transparent_image: ^2.0.1
   url_launcher: ^6.2.5
   dio: ^5.4.1
-  image_picker: ^1.0.7
   flutter_markdown: ^0.6.21
   markdown: ^7.2.2
   string_scanner: ^1.2.0
   flutter_spinkit: ^5.2.0
-  file_picker: ^8.0.0
+  file_picker: ^8.0.0+1
 
 flutter:
   generate: true # Enables generation of localized strings from arb files
