--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,3 +49,19 @@ flutter:
     - assets/images/chatgpt_red.png
     - assets/images/chat/chat_card.png
     - assets/images/chat/chat_card_dark.png
+    - assets/images/avatar/0.png
+    - assets/images/avatar/1.png
+    - assets/images/avatar/2.png
+    - assets/images/avatar/3.png
+    - assets/images/avatar/4.png
+    - assets/images/avatar/5.png
+    - assets/images/avatar/6.png
+    - assets/images/avatar/7.png
+    - assets/images/avatar/8.png
+    - assets/images/avatar/9.png
+    - assets/images/avatar/10.png
+    - assets/images/avatar/11.png
+    - assets/images/avatar/12.png
+    - assets/images/avatar/13.png
+    - assets/images/avatar/14.png
+    - assets/images/avatar/15.png
