preliminary bot support
Signed-off-by: fantao <phantasy015@qq.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,3 +66,6 @@ flutter:
     - assets/images/avatar/13.png
     - assets/images/avatar/14.png
     - assets/images/avatar/15.png
+    - assets/images/avatar/cat.png
+    - assets/images/avatar/hacker.png
+    - assets/images/avatar/augur.png
