--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   file_picker: ^8.0.0+1
   shared_preferences: ^2.2.2
+  flutter_oss_aliyun: ^6.4.1
 
 flutter:
   generate: true # Enables generation of localized strings from arb files
