add pay code(disabled)
Signed-off-by: fantao <phantasy015@qq.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,3 +70,4 @@ flutter:
     - assets/images/avatar/cat.png
     - assets/images/avatar/hacker.png
     - assets/images/avatar/augur.png
+    - assets/images/chat/paycode.jpeg
