--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  adaptive_breakpoints: ^0.1.7
+  # adaptive_breakpoints: ^0.1.7
   collection: ^1.18.0
   dual_screen: ^1.0.4
   # flutter_staggered_grid_view: ^0.7.0
