--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   collection: ^1.18.0
   dual_screen: ^1.0.4
   # flutter_staggered_grid_view: ^0.7.0
-  get_storage: ^2.1.1
+  # get_storage: ^2.1.1
   google_fonts: ^6.2.1
   intl: ^0.19.0
   # meta: ^1.15.0
@@ -32,6 +32,7 @@ dependencies:
   file_picker: ^8.0.0+1
   shared_preferences: ^2.2.3
   flutter_oss_aliyun: ^6.4.1
+  fetch_client: ^1.1.2
 
 flutter:
   generate: true # Enables generation of localized strings from arb files
