--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^2.2.3
   flutter_oss_aliyun: ^6.4.2
   fetch_client: ^1.1.2
+  flutter_markdown_latex: ^0.3.3
 
 flutter:
   generate: true # Enables generation of localized strings from arb files
