don't add custom fonts and all english in first page
Signed-off-by: fantao <phantasy015@qq.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,10 @@ dependencies:
 flutter:
   generate: true # Enables generation of localized strings from arb files
   uses-material-design: true
-  fonts:
-    - family: notosans
-      fonts:
-        - asset: assets/fonts/google_fonts/NotoSans-Regular.ttf
+  # fonts:
+  #   - family: notosans
+  #     fonts:
+  #       - asset: assets/fonts/google_fonts/NotoSans-Regular.ttf
     # - family: notosanssc
     #   fonts:
     #     - asset: assets/fonts/google_fonts/NotoSansSC.otf
