enable bot centre
Signed-off-by: fantao <phantasy015@qq.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,3 +69,16 @@ flutter:
     - assets/images/avatar/hacker.png
     - assets/images/avatar/augur.png
     - assets/images/chat/paycode.jpeg
+
+    - assets/images/bot/bot1.png
+    - assets/images/bot/bot2.png
+    - assets/images/bot/bot3.png
+    - assets/images/bot/bot4.png
+    - assets/images/bot/bot5.png
+    - assets/images/bot/bot6.png
+    - assets/images/bot/bot7.png
+    - assets/images/bot/bot8.png
+    - assets/images/bot/bot9.png
+    - assets/images/bot/bot10.png
+    - assets/images/bot/bot11.png
+    - assets/images/bot/bot12.png
