--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   fetch_client: ^1.1.2
   flutter_markdown_latex: ^0.3.3
   cupertino_icons: ^1.0.8
+  image_downloader_web: ^2.0.6
 
 flutter:
   generate: true # Enables generation of localized strings from arb files
