--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_downloader_web: ^2.0.6
   freezed_annotation: ^2.4.3
   json_annotation: ^4.9.0
+  file_saver: ^0.2.13
 
 dev_dependencies:
   build_runner: ^2.4.11
