--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   freezed_annotation: ^2.4.3
   json_annotation: ^4.9.0
   file_saver: ^0.2.13
+  flutter_image_compress: ^2.3.0
 
 dev_dependencies:
   build_runner: ^2.4.11
