--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   json_annotation: ^4.9.0
   file_saver: ^0.2.13
   flutter_image_compress: ^2.3.0
+  custom_sliding_segmented_control: ^1.8.3
 
 dev_dependencies:
   build_runner: ^2.4.11
