--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,16 +97,17 @@ flutter:
     - assets/images/bot/bot15.png
     - assets/images/bot/bot16.png
 
-    - assets/images/cat/cat3.gif
     - assets/images/cat/cat4.gif  # run to left
     - assets/images/cat/cat28.avif # run to right
     - assets/images/cat/cat11.avif # run to right
+    - assets/images/cat/cat3.gif
     - assets/images/cat/cat7.avif
     - assets/images/cat/cat17.avif
     - assets/images/cat/cat20.avif
     - assets/images/cat/cat21.avif
     # - assets/images/cat/cat25.avif
     - assets/images/cat/cat25-1.png
+    - assets/images/cat/cat26.avif
     - assets/images/cat/cat27.avif
     - assets/images/cat/cat30.avif
     - assets/images/cat/cat31.avif
@@ -117,4 +118,5 @@ flutter:
     - assets/images/cat/cat42.avif
     - assets/images/cat/cat46.avif
     - assets/images/cat/cat48.avif
+    - assets/images/cat/cat49.avif
     
