--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   transparent_image: ^2.0.1
   url_launcher: ^6.3.0
   dio: ^5.4.3+1
-  flutter_markdown: ^0.7.1
+  flutter_markdown_selectionarea: ^0.6.17+1
   string_scanner: ^1.2.0
   flutter_spinkit: ^5.2.1
   file_picker: ^8.0.3
@@ -36,6 +36,7 @@ dependencies:
   file_saver: ^0.2.13
   flutter_image_compress: ^2.3.0
   custom_sliding_segmented_control: ^1.8.3
+  highlight: ^0.7.0
 
 dev_dependencies:
   build_runner: ^2.4.11
