--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   custom_sliding_segmented_control: ^1.8.3
   highlight: ^0.7.0
   flutter_widget_from_html: ^0.15.1
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   build_runner: ^2.4.11
