--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,24 +16,24 @@ dependencies:
   dual_screen: ^1.0.4
   google_fonts: ^6.2.1
   intl: ^0.19.0
-  package_info_plus: ^8.0.0
+  package_info_plus: ^8.0.2
   provider: ^6.1.2
   transparent_image: ^2.0.1
   url_launcher: ^6.3.0
-  dio: ^5.4.3+1
-  flutter_markdown: ^0.7.3
-  string_scanner: ^1.2.0
+  dio: ^5.6.0
+  flutter_markdown: ^0.7.3+1
+  string_scanner: ^1.3.0
   flutter_spinkit: ^5.2.1
-  file_picker: ^8.0.3
-  shared_preferences: ^2.2.3
+  file_picker: ^8.1.2
+  shared_preferences: ^2.3.2
   flutter_oss_aliyun: ^6.4.2
   fetch_client: ^1.1.2
   flutter_markdown_latex: ^0.3.3
   cupertino_icons: ^1.0.8
   image_downloader_web: ^2.0.6
-  freezed_annotation: ^2.4.3
+  freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
-  file_saver: ^0.2.13
+  file_saver: ^0.2.14
   flutter_image_compress: ^2.3.0
   custom_sliding_segmented_control: ^1.8.3
   highlight: ^0.7.0
