--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: gallery
 description: A gallery to list apps.
 repository: https://github.com/flutter/gallery
-version: 2.10.2+021002 # See README.md for details on versioning.
+version: 0.8.8
 
 environment:
-  flutter: ^3.22.1
-  sdk: ^3.4.1
+  flutter: ^3.24.1
+  sdk: ^3.5.1
 
 dependencies:
   flutter:
@@ -40,8 +40,8 @@ dependencies:
   scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
-  build_runner: ^2.4.11
-  freezed: ^2.5.2
+  build_runner: ^2.4.12
+  freezed: ^2.5.7
   json_serializable: ^6.8.0
 
 flutter:
