--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   highlight: ^0.7.0
   scrollable_positioned_list: ^0.3.8
   web: ^1.0.0
+  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   build_runner: ^2.4.12
