--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "App Gallery",
-    "short_name": "App Gallery",
+    "name": "Bots Dock",
+    "short_name": "Bots Dock",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#030303",
     "theme_color": "#030303",
-    "description": "A resource to help developers evaluate and use Flutter.",
+    "description": "A Chat Bot build with OpenAI and Claude API.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
