--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A gallery to list apps.
 version: 0.9.9
 
 environment:
-  flutter: ^3.24.4
+  flutter: ^3.24.5
   sdk: ^3.5.4
 
 dependencies:
@@ -11,7 +11,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  collection: ^1.18.0
+  # collection: ^1.18.0
   dual_screen: ^1.0.4
   google_fonts: ^6.2.1
   intl: ^0.19.0
@@ -21,16 +21,16 @@ dependencies:
   url_launcher: ^6.3.1
   dio: ^5.7.0
   flutter_markdown: ^0.7.4+1
-  string_scanner: ^1.4.0
+  # string_scanner: ^1.4.0
   flutter_spinkit: ^5.2.1
-  file_picker: ^8.1.3
-  shared_preferences: ^2.3.2
+  file_picker: ^8.1.4
+  shared_preferences: ^2.3.3
   flutter_oss_aliyun: ^6.4.2
   fetch_client: ^1.1.2
   flutter_markdown_latex: ^0.3.4
   image_downloader_web: ^2.0.6
-  freezed_annotation: ^2.4.4
-  json_annotation: ^4.9.0
+  # freezed_annotation: ^2.4.4
+  # json_annotation: ^4.9.0
   file_saver: ^0.2.14
   flutter_image_compress: ^2.3.0
   custom_sliding_segmented_control: ^1.8.4
