--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_localizations:
-    sdk: flutter
+  # flutter_localizations:
+  #   sdk: flutter
   # collection: ^1.18.0
   dual_screen: ^1.0.4
   google_fonts: ^6.2.1
-  intl: ^0.19.0
+  intl: ^0.20.1
   package_info_plus: ^8.1.1
   provider: ^6.1.2
   transparent_image: ^2.0.1
   url_launcher: ^6.3.1
   dio: ^5.7.0
-  flutter_markdown: ^0.7.4+1
+  flutter_markdown: ^0.7.4+3
   # string_scanner: ^1.4.0
   flutter_spinkit: ^5.2.1
   file_picker: ^8.1.4
@@ -40,10 +40,10 @@ dependencies:
   openai_dart: ^0.4.4
   anthropic_sdk_dart: ^0.2.0
 
-dev_dependencies:
-  build_runner: ^2.4.13
-  freezed: ^2.5.7
-  json_serializable: ^6.8.0
+# dev_dependencies:
+#   build_runner: ^2.4.13
+#   freezed: ^2.5.7
+#   json_serializable: ^6.8.0
 
 flutter:
   generate: true # Enables generation of localized strings from arb files
