--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,12 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  # flutter_localizations:
-  #   sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   # collection: ^1.18.0
   dual_screen: ^1.0.4
   google_fonts: ^6.2.1
-  intl: ^0.20.1
+  intl: ^0.19.0
   package_info_plus: ^8.1.1
   provider: ^6.1.2
   transparent_image: ^2.0.1
