--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install Flutter
+      - name: Clone repository
+        uses: actions/checkout@v4
+      - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 'stable'
+          channel: stable # or: beta, master (or main)
+      - run: flutter --version
 
       - name: Get dependencies
         run: flutter pub get
