--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -3,7 +3,7 @@ name: Deploy Flutter Web
 on:
   push:
     branches:
-      - main
+      - dev
 
 jobs:
   build:
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
+        with:
+          ref: dev
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
