--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   flutter_markdown: ^0.7.4+3
   # string_scanner: ^1.4.0
   flutter_spinkit: ^5.2.1
-  file_picker: ^8.1.4
+  file_picker: ^8.1.6
   shared_preferences: ^2.3.3
   flutter_oss_aliyun: ^6.4.2
   fetch_client: ^1.1.2
@@ -37,8 +37,8 @@ dependencies:
   highlight: ^0.7.0
   scrollable_positioned_list: ^0.3.8
   web: ^1.1.0
-  openai_dart: ^0.4.4
-  anthropic_sdk_dart: ^0.2.0
+  openai_dart: ^0.4.5
+  anthropic_sdk_dart: ^0.2.0+1
 
 # dev_dependencies:
 #   build_runner: ^2.4.13
