--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,8 @@ flutter:
     #     - asset: assets/fonts/GalleryIcons.ttf
 
   assets:
-    - assets/images/chatgpt_red.png
+    - assets/images/openai.png
+    - assets/images/anthropic.png
     - assets/images/deepseek.png
     - assets/images/chat/
     - assets/images/avatar/
