add gemini support[1/2]: add UI
Signed-off-by: fantao <phantasy015@qq.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ flutter:
   assets:
     - assets/images/openai.png
     - assets/images/anthropic.png
+    - assets/images/google.png
     - assets/images/deepseek.png
     - assets/images/chat/
     - assets/images/avatar/
