--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   web: ^1.1.0
   openai_dart: ^0.4.5
   anthropic_sdk_dart: ^0.2.0+1
+  googleai_dart: ^0.1.0+3
 
 # dev_dependencies:
 #   build_runner: ^2.4.13
