--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   transparent_image: ^2.0.1
   url_launcher: ^6.3.1
   dio: ^5.7.0
-  flutter_markdown: ^0.7.4+3
+  flutter_markdown: ^0.7.5
   # string_scanner: ^1.4.0
   flutter_spinkit: ^5.2.1
   file_picker: ^8.1.7
@@ -33,7 +33,7 @@ dependencies:
   # json_annotation: ^4.9.0
   file_saver: ^0.2.14
   flutter_image_compress: ^2.4.0
-  custom_sliding_segmented_control: ^1.8.4
+  custom_sliding_segmented_control: ^1.8.5
   highlight: ^0.7.0
   scrollable_positioned_list: ^0.3.8
   web: ^1.1.0
