--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ dependencies:
   dual_screen: ^1.0.4
   google_fonts: ^6.2.1
   intl: ^0.19.0
-  package_info_plus: ^8.1.2
+  package_info_plus: ^8.1.3
   provider: ^6.1.2
   transparent_image: ^2.0.1
   url_launcher: ^6.3.1
@@ -35,6 +35,7 @@ dependencies:
   openai_dart: ^0.4.5
   anthropic_sdk_dart: ^0.2.0+1
   googleai_dart: ^0.1.0+3
+  flutter_dotenv: ^5.2.1
 
 
 flutter:
@@ -60,3 +61,4 @@ flutter:
     - assets/images/avatar/
     - assets/images/bot/
     - assets/images/cat/
+    - assets/env.conf
