--- a/.github/workflows/build_and_deploy.yml
+++ b/.github/workflows/build_and_deploy.yml
@@ -15,6 +15,17 @@ jobs:
         with:
           ref: dev
 
+      - name: Setup SSH
+        run: |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY_BWG }}" > ~/.ssh/id_ed25519
+          chmod 600 ~/.ssh/id_ed25519
+          ssh-keyscan -p ${{ secrets.BWG_PORT }} ${{ secrets.BWG_IP }} >> ~/.ssh/known_hosts
+
+      - name: get env file from server
+        run: |
+          scp -P ${{ secrets.BWG_PORT }}  ${{ secrets.SSH_USERNAME }}@${{ secrets.BWG_IP }}:/home/${{ secrets.SSH_USERNAME }}/work/env.conf assets/
+
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -26,13 +37,6 @@ jobs:
 
       - name: Build Flutter Web
         run: flutter build web --release --pwa-strategy none
-
-      - name: Setup SSH
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY_BWG }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan -p ${{ secrets.BWG_PORT }} ${{ secrets.BWG_IP }} >> ~/.ssh/known_hosts
 
       - name: Upload build files to server
         run: |
