--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,12 +14,12 @@ dependencies:
   dual_screen: ^1.0.4
   google_fonts: ^6.2.1
   intl: ^0.19.0
-  package_info_plus: ^8.1.4
+  package_info_plus: ^8.2.0
   provider: ^6.1.2
   transparent_image: ^2.0.1
   url_launcher: ^6.3.1
   dio: ^5.8.0+1
-  flutter_markdown: ^0.7.6
+  flutter_markdown: ^0.7.6+1
   flutter_spinkit: ^5.2.1
   file_picker: ^8.3.1
   shared_preferences: ^2.5.1
