--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: botsdock
 description: A gallery to list apps.
-version: 1.0.6
+version: 1.0.7
 
 environment:
   flutter: ^3.27.0
@@ -19,10 +19,10 @@ dependencies:
   transparent_image: ^2.0.1
   url_launcher: ^6.3.1
   dio: ^5.8.0+1
-  flutter_markdown: ^0.7.6+1
+  flutter_markdown: ^0.7.6+2
   flutter_spinkit: ^5.2.1
-  file_picker: ^8.3.2
-  shared_preferences: ^2.5.1
+  file_picker: ^9.0.0
+  shared_preferences: ^2.5.2
   flutter_oss_aliyun: ^6.4.2
   fetch_client: ^1.1.2
   flutter_markdown_latex: ^0.3.4
@@ -62,3 +62,4 @@ flutter:
     - assets/images/bot/
     - assets/images/cat/
     - assets/env.conf
+    - assets/mermaid.min.js
