add custom debug logger
Signed-off-by: fantao <phantasy015@qq.com>

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
     git:
       url: https://github.com/bourne015/flutter_markdown_latex
       ref: delete-fonts
+  ansicolor: ^2.0.3
 
 
 flutter:
