--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
       url: https://github.com/bourne015/flutter_markdown_latex
       ref: delete-fonts
   ansicolor: ^2.0.3
+  retry: ^3.1.2
 
 
 flutter:
