--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   fetch_client: ^1.1.3
   file_saver: ^0.2.14
   flutter_image_compress: ^2.4.0
+  flutter_inappwebview: ^6.1.5
   custom_sliding_segmented_control: ^1.8.5
   highlight: ^0.7.0
   scrollable_positioned_list: ^0.3.8
@@ -40,6 +41,7 @@ dependencies:
       ref: delete-fonts
   ansicolor: ^2.0.3
   provider: ^6.1.4
+  pointer_interceptor: ^0.10.1+2
   retry: ^3.1.2
   shared_preferences: ^2.5.3
 
