--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -174,5 +174,7 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app requires access to your photo library to save images.</string>
 </dict>
 </plist>
