--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
       url: https://github.com/bourne015/flutter_markdown_latex
       ref: delete-fonts
   ansicolor: ^2.0.3
+  percent_indicator: ^4.2.5
   permission_handler: ^11.4.0
   provider: ^6.1.4
   pointer_interceptor: ^0.10.1+2
