--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: botsdock
 description: A gallery to list apps.
-version: 1.2.2
+version: 1.2.3
 
 publish_to: none
 
@@ -19,9 +19,9 @@ dependencies:
   transparent_image: ^2.0.1
   url_launcher: ^6.3.1
   dio: ^5.8.0+1
-  flutter_markdown: ^0.7.6+2
+  flutter_markdown: ^0.7.7
   flutter_spinkit: ^5.2.1
-  file_picker: ^10.0.0
+  file_picker: ^10.1.2
   flutter_oss_aliyun: ^6.4.2
   fetch_client: ^1.1.3
   file_saver: ^0.2.14
@@ -42,7 +42,7 @@ dependencies:
       ref: delete-fonts
   ansicolor: ^2.0.3
   percent_indicator: ^4.2.5
-  permission_handler: ^11.4.0
+  permission_handler: ^12.0.0+1
   provider: ^6.1.4
   pointer_interceptor: ^0.10.1+2
   retry: ^3.1.2
