--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   dual_screen: ^1.0.4
+  mcp_dart: ^0.5.0
   google_fonts: ^6.2.1
   package_info_plus: ^8.3.0
   transparent_image: ^2.0.1
@@ -28,6 +29,7 @@ dependencies:
   flutter_image_compress: ^2.4.0
   flutter_image_gallery_saver: ^0.0.2
   flutter_inappwebview: ^6.1.5
+  flutter_riverpod: ^2.6.1
   google_generative_ai:
       git:
         url: https://github.com/bourne015/generative-ai-dart
@@ -49,6 +51,7 @@ dependencies:
   pointer_interceptor: ^0.10.1+2
   retry: ^3.1.2
   shared_preferences: ^2.5.3
+  uuid: ^4.5.1
 
 
 flutter:
