--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: botsdock
 description: A gallery to list apps.
-version: 1.2.3
+version: 1.2.4
 
 publish_to: none
 
@@ -21,9 +21,9 @@ dependencies:
   url_launcher: ^6.3.1
   dio: ^5.8.0+1
   fetch_client: ^1.1.4
-  flutter_markdown: ^0.7.7
+  flutter_markdown: ^0.7.7+1
   flutter_spinkit: ^5.2.1
-  file_picker: ^10.1.2
+  file_picker: ^10.1.9
   flutter_oss_aliyun: ^6.4.2
   file_saver: ^0.2.14
   flutter_image_compress: ^2.4.0
@@ -47,7 +47,7 @@ dependencies:
   ansicolor: ^2.0.3
   percent_indicator: ^4.2.5
   permission_handler: ^12.0.0+1
-  provider: ^6.1.4
+  provider: ^6.1.5
   pointer_interceptor: ^0.10.1+2
   retry: ^3.1.2
   shared_preferences: ^2.5.3
